# Graph-Theory-Study

./: README.md  atividade1.py  grafos.py  relatorio.odt
doc/: relatorio.md
doc/relatorio1/: relatorio.tex
doc/relatorio2/: relatorio.tex
py/: README.md  atividade1.py  pyproject.toml
py/doc/atividade2/: relatorio.tex
py/graph/: __main__.py
py/src/: grafo.py
rs/: Cargo.toml  README.md  diff  graph.rs
rs/a2/: README.md  main
rs/a2/src/: main.rs
rs/a3/: Cargo.toml
rs/a3/src/: main.rs
rs/src/: main.rs
src/: grafo.py
