[tool.poetry]
name = "atividade1"
version = "0.1.0"
description = "Atividade 1 de Grafos INE5413"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.2"
networkx = "^2.8"
PyQt5 = "^5.15.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
